--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,3 +37,16 @@ h1 {
   text-decoration: none;
 }
 
+
+input {
+  border: 1px solid #cccccc;
+  padding: 8px;
+}
+
+button {
+  cursor: pointer;
+  border: 1px solid #888888;
+  background: #888888;
+  color: white;
+  padding: 8px;
+}
