--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,7 +8,9 @@
     <body>
         <div class="main-content">
         <h1>{{>header}}</h1>
+        <p>This is a website created by Saksham Pratap Singh. It uses Node.js as the backend framework and weather stack API for the information.</p>
         </div>
+        <img class="imagescl" src="/images/cloud.jpg" alt="Cloud Image">
         {{>footer}}
     </body>
 
