--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,10 @@ body {
 .main-content {
   flex-grow: 1;
 }
-
+.imagescl {
+  height: 450px;
+  width: 300px;
+}
 footer {
   color: #888888;
   border-top: 1px solid #eeeeee;
